2012-04-24  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/syscalls.list (madvise): Add syscall from
	sysdeps/unix/mman/syscalls.list.
	(mmap): Likewise.
	(mprotect): Likewise.
	(msync): Likewise.
	(munmap): Likewise.
	* sysdeps/unix/bsd/bsd4.4/Implies: Remove.
	* sysdeps/unix/mman/syscalls.list: Remove.
	* sysdeps/unix/sysv/linux/Implies: Don't include unix/mman.

	* configure.in (libc_cv_libgcc_s_suffix): Remove test.
	(libc_cv_as_needed): Don't use $libc_cv_libgcc_s_suffix.
	* configure: Regenerated.
	* Makeconfig [$(have-as-needed) = yes] (libgcc_eh): Don't use
	$(libgcc_s_suffix).
	* config.make.in (libgcc_s_suffix): Remove variable.

2012-04-23  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/gethostname.c: Move to ...
	* sysdeps/posix/gethostname.c: ... here.

	* sysdeps/unix/execve.S: Remove file.

	* sysdeps/unix/_exit.S: Remove file.

2012-04-23  Andreas Jaeger  <aj@suse.de>

	[BZ #13739]
	* manual/Makefile: Remove make dist support, there's no
	need for a stand-alone documentation tar ball.
	(TEXI2DVI): Define always, it's not in Makeconfig.
	(dist): Removed.
	(tar-it): Removed.
	(edition): Removed.
	(glibc-doc-$(edition).tar): Removed
	(%.Z): Removed.
	(%.gz): Removed.
	(%.uu): Removed.
	(ETAGS): Remove, it's in Makeconfig.
	(move-if-change): Remove, it's in Makeconfig.

2013-04-23  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #13970]
	* stdlib/stdlib.h: Remove warn_unused_result attribute from strtol etc.
	(strtod, strtof, strtold, strtol, strtoul, strtoq)
	(strtouq, strtoll, strtoull, strtol_l, strtoul_l, strtoll_l, strtoull_l)
	(strtod_l, strtof_l, strtold_l): Remove __wur.
	It is not necessarily an error to ignore strtol's return value.
	One can reliably look at the stored endptr to decide whether
	the number had valid syntax.

2012-04-21  Andreas Jaeger  <aj@suse.de>

	[BZ #13739]
	* sysdeps/s390/s390-64/Makefile (distribute): Remove variable.

2012-04-21  Joseph Myers  <joseph@codesourcery.com>
